# model-improvement-toolkit

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
spec/: architecture.md  design.md  requirements.md  tasks.md
spec/feature-importance/: requirements.md
spec/metrics/: requirements.md
spec/model-analysis/: requirements.md
src/model_improvement_toolkit/: __init__.py
src/model_improvement_toolkit/analysis/: __init__.py  feature_importance.py
src/model_improvement_toolkit/core/: __init__.py  analyzer.py  metrics.py  validator.py
src/model_improvement_toolkit/suggestions/: __init__.py
src/model_improvement_toolkit/utils/: __init__.py  config.py  exceptions.py
src/model_improvement_toolkit/visualization/: __init__.py  plots.py  report_generator.py
tests/: __init__.py  conftest.py
tests/test_analysis/: __init__.py  test_feature_importance.py
tests/test_core/: __init__.py  test_analyzer.py  test_metrics.py  test_validator.py
tests/test_integration/: test_analyze_model.py
tests/test_models/: __init__.py  test_base.py  test_lightgbm.py
tests/test_utils/: __init__.py  test_config.py  test_exceptions.py
tests/test_visualization/: __init__.py  test_plots.py  test_report_generator.py
